@@ -15,6 +15,7 @@ CHANGES
 * Issue #307: Prints the full path when .svn/entries is broken.
 * Issue #313: Support for sdist subcommands (Python 2.7)
 * Issue #314: test_local_index() would fail an OS X.
+* Issue #310: Non-ascii characters in a namespace __init__.py causes errors.
 
 ------
 0.6.28
